# rojcpp

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  __user_config.hpp  main.cpp  readme.md
CURD/: curd_base.hpp  judger_table.hpp  login_logs.hpp  modern_cppdb.hpp  problems.hpp  solutions.hpp  user_table.hpp
SQL/: create-sql-without-fk.sql  create-sql.sql
jsonEntity/: DEF_MSG.hpp  MsgEntity.hpp  __Entity__.hpp  judgeEntiy.hpp  solutions.hpp  userEntity.hpp
jsonEntity/sql/: sqlBase.hpp
lib/: appException.hpp  judgeConnect.hpp  redisLib.hpp  rojcppUtils.hpp  sqlpool.hpp
lib/RedisCache/: redisBase.hpp
routes/: __Routes__.hpp  judger.hpp  user.hpp  user_ap.hpp
tests/: user_login.sh  user_register.sh
tests/judge/: send.sh  send_judge.json
